Issue #10783: struct.pack() doesn't encode implicitly unicode to UTF-8

* Replace "bytes" by "bytes object" in struct error messages
 * Document the API change in What's new in Python 3.2
 * Fix test_wave
 * Remove also ugly implicit conversions in test_struct